# dagster-patterns

./: config.yaml  pyproject.toml  pyrightconfig.json
dagster_patterns/assets_with_parallel_op_defs/: __init__.py
